--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,17 +26,14 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
+      - name: Download Docker image
+        uses: actions/download-artifact@v3
         with:
-          python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
-        run: python app-teste.py
+          name: docker-image
+      - name: Load Docker image
+        run: docker load -i api.tar
+      - name: Run tests
+        run: docker run api python app-teste.py
 
   deploy:
     runs-on: ubuntu-latest
