--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,13 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.10"
       - name: Build docker image
         run: docker build -t api .
-
+      - name: Run docker image
+        run: docker run api 
   test:
     runs-on: ubuntu-latest
     needs: build
