--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,21 +15,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build docker image
-        run: docker build -t api . 
-    test:
+        run: docker build -t api .
+ 
+  test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Download Docker image
-        uses: actions/download-artifact@v3
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v3
         with:
-          name: docker-image
-      - name: Load Docker image
-        run: docker load -i api.tar
-      - name: Run tests
-        run: docker run api python app-teste.py
-        
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Test with pytest
+        run: python app-teste.py
+
   deploy:
     runs-on: ubuntu-latest
     needs: test
