--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,12 +16,19 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build docker image
         run: docker build -t api .
- 
+      - name: Upload image
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
+      - name: Download Docker image
+        uses: actions/download-artifact@v3
+        with:
+          name: docker-image
       - name: Run docker image
         run: |
           docker-compose run app-teste.py
