--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,12 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build docker image
+      - name: Build Docker image
         run: docker build -t api .
+      - name: Save Docker image as artifact
+        run: docker save api -o api.tar
       - name: Upload image
         uses: actions/upload-artifact@v3
         with:
           name: docker-image
+          path: api.tar
+
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -29,9 +33,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: docker-image
-      - name: Run docker image
-        run: |
-          docker-compose run app-teste.py
+      - name: Load Docker image
+        run: docker load -i api.tar
+      - name: Run tests
+        run: docker run api python app-teste.py
   deploy:
     runs-on: ubuntu-latest
     needs: test
