--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,29 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build Docker image
+      - name: Build docker image
         run: docker build -t api .
-      - name: Save Docker image as artifact
-        run: docker save api -o api.tar
-      - name: Upload image
-        uses: actions/upload-artifact@v3
-        with:
-          name: docker-image
-          path: api.tar
-
+ 
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v4
-      - name: Download Docker image
-        uses: actions/download-artifact@v3
-        with:
-          name: docker-image
-      - name: Load Docker image
-        run: docker load -i api.tar
-      - name: Run tests
-        run: docker run api python app-teste.py
+      - uses: actions/checkout@v4"
+      - name: Run docker image
+        run: |
+          docker run app-teste.py
   deploy:
     runs-on: ubuntu-latest
     needs: test
