--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v4"
+      - uses: actions/checkout@v4
       - name: Run docker image
         run: |
           docker run app-teste.py
