--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Run docker image
         run: |
-          docker run app-teste.py
+          docker run api
+      - name:
+        run: |
+          python run app-teste.py
+          
   deploy:
     runs-on: ubuntu-latest
     needs: test
