--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,18 +16,28 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build docker image
         run: docker build -t api .
+      - name: Saving docker image
+        run: |
+          docker save api -o api.tar
+      - name: Upload image
+        uses: actions/upload-artifact@v3
+        with:
+          name: docker-image
+          path: api.tar
  
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: Run docker image
-        run: |
-          docker run api
-      - name:
-        run: |
-          python run app-teste.py
+      - name: Download Docker image
+        uses: actions/download-artifact@v3
+        with:
+          name: docker-image
+      - name: Load Docker image
+        run: docker load -i api.tar
+      - name: Run tests
+        run: docker run api python app-teste.py
           
   deploy:
     runs-on: ubuntu-latest
