--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/upload-artifact@v3
       - name: Build docker image
         run: docker build -t api .
       - name: Saving docker image
@@ -30,6 +31,7 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/upload-artifact@v3
       - name: Download Docker image
         uses: actions/download-artifact@v3
         with:
