--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,30 +16,14 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build docker image
         run: docker build -t api .
-      - name: Saving docker
-        run: docker save api -o api.tar
-      - name: upload docker
-        uses: actions/checkout@v4
-        with:
-          name: api
-          path: api.tar
- 
+      
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - name: download docker image
-        uses: actions/checkout@v4
-        with: 
-          name: api
-      - name: load
-        run: |
-          docker load -i api
-      - name: run teste
-        run:
-          docker run api python app-teste.py
-      
+      - name: Run test
+        run: docker-compose run api python -m unittest discover
           
   deploy:
     runs-on: ubuntu-latest
