--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,10 +22,9 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/docker-setup@v4
 
       - name: Setup docker
-        uses: actions/docker-setup@v4
+        uses: actions/checkout@v4
         with: 
           docker-version: '28.0.1'
         
