--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,9 +2,10 @@ name: Run Docker Compose
 
 on:
   push:
-    branches:
-      - main
-
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+    
 jobs:
   docker:
     runs-on: ubuntu-latest
