--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,20 +5,33 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-    
+
 jobs:
-  docker:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - name: Build docker image
+        run: docker build -t api .
+      
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
-    - name: Install Docker Compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-
-    - name: Run docker-compose
-      run: |
-        docker-compose up -d
+      - name: Install Docker Compose
+        run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            
+      - name: Run tests with docker-compose
+        run: docker-compose run api python -m unittest discover
+          
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Trigger deploy on Render
+        run: curl -X POST https://api.render.com/deploy/srv-d0qh086mcj7s73e1he5g?key=LbloELl-Lrg
