--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,6 +26,9 @@ jobs:
             sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
             sudo chmod +x /usr/local/bin/docker-compose
             
+      - name: Run docker-compose
+        run: |
+          docker-compose up -d
       - name: Run tests with docker-compose
         run: docker-compose run api python -m unittest discover
           
