--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,27 +10,34 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Build docker image
-        run: docker build -t api .
+    - name: Checkout do código
+      uses: actions/checkout@v4
+
+    - name: Instalar Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+
+    - name: Buildar containers com Docker Compose
+      run: docker-compose build
       
   test:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
-      - name: Install Docker Compose
+      - name: Instalar Docker Compose
         run: |
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-            
-      - name: Build containers
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+
+      - name: Buildar containers com Docker Compose
         run: docker-compose build
-        
-      - name: Run tests with docker-compose
-        run: docker-compose run api python -m unittest discover
+
+      - name: Rodar testes com Docker Compose
+        run: docker-compose run --rm api python -m unittest discover app/tests
           
   deploy:
     runs-on: ubuntu-latest
