--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Run Docker Compose
+name: CICD build - test - deploy
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
 
     - name: Buildar containers com Docker Compose
       run: docker-compose build
-      
+
   test:
     runs-on: ubuntu-latest
     needs: build
@@ -32,10 +32,7 @@ jobs:
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Buildar containers com Docker Compose
-        run: docker-compose build
-
+          
       - name: Rodar testes com Docker Compose
         run: docker-compose run --rm api python -m unittest discover app/tests
           
