--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,9 +32,9 @@ jobs:
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
-          
+
       - name: Rodar testes com Docker Compose
-        run: docker-compose run --rm api python -m unittest discover app/tests
+        run: docker-compose run api python -m unittest discover
           
   deploy:
     runs-on: ubuntu-latest
