--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Instalar Docker Compose
       run: |
         sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        
+        sudo chmod +x /usr/local/bin/docker-compose
 
     - name: Buildar containers com Docker Compose
       run: docker-compose build
@@ -31,7 +31,7 @@ jobs:
       - name: Instalar Docker Compose
         run: |
           sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          
+          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Rodar testes com Docker Compose
         run: docker-compose run api python -m unittest discover
