--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,7 +34,7 @@ jobs:
           sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Rodar testes com Docker Compose
-        run: docker-compose run api python -m unittest discover
+        run: docker-compose run api python -m unittest discover app/test
           
   deploy:
     runs-on: ubuntu-latest
