--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,16 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout do código
-      uses: actions/checkout@v4
-
-    - name: Instalar Docker Compose
+    - uses: actions/checkout@v4
+    - name: setup Docker
+      uses: actions/setup-python@v3
+      with:
+        docker: "28.0.1"
+    - name: Creating docker
       run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-
-    - name: Buildar containers com Docker Compose
-      run: docker-compose build
+       docker build -t api .
 
   test:
     runs-on: ubuntu-latest
@@ -28,9 +26,9 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Instalar Docker Compose
+      - name: Install Docker Compose
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
           sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Rodar testes com Docker Compose
