--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,13 +22,8 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Install Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.24.2/docker-compose-Linux-x86_64" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
       - name: Testing with Docker Compose
-        run: docker-compose run api python -m unittest discover app/tests
+        run: docker compose run api python -m unittest discover app/tests
           
   deploy:
     runs-on: ubuntu-latest
